--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: "en" }}">
   <head>
-    
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -37,6 +37,10 @@
       {% include search.html %}
     {% endunless %}
 
+    <div class="center-button center-button-vertical">
+      <script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" data-name="bmc-button" data-slug="demietranger" data-color="#FFDD00" data-emoji="☕"  data-font="Bree" data-text="Buy me a coffee" data-outline-color="#000000" data-font-color="#000000" data-coffee-color="#ffffff" ></script>
+    </div>
+
     {% include menu.html %}
 
     {% unless site.hide_credits %}
@@ -46,6 +50,12 @@
         </p>
       </aside>
     {% endunless %}
+    
+    <div class="center-button center-button-vertical">
+      <hr>
+      <p>© {{ "now" | date: "%Y" }} Demie Tranger. All rights reserved.</p>
+      <br>
+    </div>
 
   </body>
 </html>
