--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,8 @@
     {% endunless %}
 
     <div class="center-button center-button-vertical">
-      <script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" data-name="bmc-button" data-slug="demietranger" data-color="#FFDD00" data-emoji="☕"  data-font="Bree" data-text="Buy me a coffee" data-outline-color="#000000" data-font-color="#000000" data-coffee-color="#ffffff" ></script>
+      <br>
+      <a href='https://ko-fi.com/G2G317HBFR' target='_blank'><img height='36' style='border:0px;height:36px;' src='https://storage.ko-fi.com/cdn/kofi6.png?v=6' border='0' alt='Buy Me a Coffee at ko-fi.com' /></a>
     </div>
 
     {% include menu.html %}
