--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,7 @@
 
       gtag('config', 'G-KD7NGHPFYF');
     </script>
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -47,8 +48,10 @@
     {% endunless %}
 
     <div class="center-button center-button-vertical">
-      <br>
+      
       <a href='https://ko-fi.com/G2G317HBFR' target='_blank'><img height='36' style='border:0px;height:36px;' src='https://storage.ko-fi.com/cdn/kofi6.png?v=6' border='0' alt='Buy Me a Coffee at ko-fi.com' /></a>
+      <!-- <a href="https://twitter.com/demietranger?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false" data-size="large">@demietranger</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> -->
+
     </div>
 
     {% include menu.html %}
